--- a/SokHub/customer/templates/base.html
+++ b/SokHub/customer/templates/base.html
@@ -132,7 +132,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-black py-3">
         <div class="container">
-            <a class="navbar-brand text-magenta" href="{% url 'home' %}">
+            <a class="navbar-brand text-magenta" href="{% url 'product_list' %}">
                 <i class="fas fa-store me-2"></i>Sok<span class="text-white">Hub</span>
             </a>
             
@@ -143,7 +143,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="{% url 'home' %}">
+                        <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="{% url 'product_list' %}">
                             <i class="fas fa-home me-1"></i> Home
                         </a>
                     </li>
@@ -223,7 +223,7 @@
                 <div class="col-md-2">
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="{% url 'home' %}" class="text-white text-decoration-none">Home</a></li>
+                        <li><a href="{% url 'product_list' %}" class="text-white text-decoration-none">Home</a></li>
                         <li><a href="{% url 'about' %}" class="text-white text-decoration-none">About Us</a></li>
                         <li><a href="{% url 'contact' %}" class="text-white text-decoration-none">Contact</a></li>
                     </ul>
