--- a/SokHub/product/templates/products/product_detail.html
+++ b/SokHub/product/templates/products/product_detail.html
@@ -1085,7 +1085,7 @@
         <div class="row">
             {% for related in related_products %}
             <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-                {% include "products/includes/product_card.html" with product=related %}
+                {% include "includes/product_card.html" with product=related %}
             </div>
             {% endfor %}
         </div>
