--- a/SokHub/product/templates/includes/product_card.html
+++ b/SokHub/product/templates/includes/product_card.html
@@ -135,7 +135,7 @@
         <div class="text-center mt-3">
             <small>
                 {% if user.is_authenticated %}
-                <a href="{% url 'add_to_wishlist' product.id %}" 
+                <a href="{% url 'toggle_wishlist' product.id %}" 
                    class="text-muted me-3" 
                    title="Add to Wishlist">
                     <i class="far fa-heart"></i> Save
