otp about login and fist check credentials

--- a/customer/templates/verify_otp.html
+++ b/customer/templates/verify_otp.html
@@ -1,3 +1,9 @@
+
+{% extends "base.html" %}
+ {% load static %}
+
+  {% block content %}
+ 
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -137,4 +143,6 @@
         }, 1000);
     </script>
 </body>
+{% endblock %}
 </html>
+ 
